--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,17 @@
     <string name="dash">-</string>
     <string name="user1">\@user1</string>s
     <string name="repository">Repository</string>
+    <string name="salomo_hutapea">Salomo Hutapea</string>
+    <string name="salomohutapea">\@salomohutapea</string>
+    <string name="google">Google</string>
+    <string name="_100">100</string>
+    <string name="followers">followers</string>
+    <string name="dot">·</string>
+    <string name="_200">200</string>
+    <string name="user_follow_icon">User follow icon</string>
+    <string name="repository_count_icon">Repository count icon</string>
+    <string name="following">following</string>
+    <string name="location">Location</string>
 
     <string-array name="username">
         <item>JakeWharton</item>
