Submission 2 : create RecyclerViewHandler.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Github User</string>
     <string name="user_1">User 1</string>
     <string name="dash">-</string>
-    <string name="user1">\@user1</string>s
+    <string name="user1">\@user1</string>
     <string name="repository">Repository</string>
     <string name="salomo_hutapea">Salomo Hutapea</string>
     <string name="salomohutapea">\@salomohutapea</string>
