--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="nine">09:00</string>
     <string name="repeating_alarm">Repeating alarm</string>
     <string name="settings">Settings</string>
+    <string name="error_add_fav">Error adding user to favorites</string>
 </resources>
 
 
